--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -78,9 +78,56 @@
 }
 
 .hero-wrapper {
-  position: relative;
-  width: 100%;
-  height: 94vh;
-  overflow: hidden; /* Hides anything that overflows */
+    position: relative;
+    width: 100%;
+    height: 94vh;
+    overflow: hidden;
 }
+
+.btn:hover {
+    background: none;
+}
+
+/* _____________________________ */
+@media (max-width: 768px) {
+  .industryDiv {
+    flex-direction: column;
+  }
+
+  .industryDiv .col-md-9,
+  .industryDiv .col-md-3 {
+    width: 100%;
+    position: static !important;
+    padding-left: 0 !important;
+  }
+
+  .industryDiv .col-md-3 > div {
+    position: static !important;
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .industryDiv .col-md-3 img {
+    width: 100% !important;
+    max-width: 300px;
+    height: auto;
+  }
+
+  .redDiv .row {
+    flex-direction: column;
+  }
+
+  .redDiv .col-lg-3 {
+    width: 100% !important;
+    margin-bottom: 15px;
+  }
+
+  .paragraph {
+    font-size: 14px;
+  }
+}
+
+
+
+
 
